# legal-rag-application

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: auth.py  documents.py  health.py  query.py
app/core/: config.py  exceptions.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: cca4d84e944d_add_chunks_table.py  ed613153d319_create_users_table.py
app/models/: chunk.py  document.py  user.py
app/repositories/: chunk_repo.py  document_repo.py  user_repo.py
app/schemas/: auth.py  document.py  query.py
app/services/: auth_service.py
app/services/ingestion/: chunker.py  embedder.py  pdf_parser.py  storage.py
app/services/query/: citation_builder.py  generator.py  reranker.py  retriever.py
app/workers/: celery_app.py  ingestion_worker.py
