[project]
name = "legal-rag-api"
version = "0.1.0"
description = "Legal Document Q&A — RAG system with FastAPI + Celery + pgvector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
